# xai-cookbook

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: format-on-edit.py  protect-files.py  security-check.py  validate-environment.py  validate-prompt.py  verify-on-complete.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md
.github/workflows/: ci.yml
examples/01_getting_started/: 01_hello_grok.py  02_list_models.py  03_model_info.py  04_api_key_info.py
examples/02_chat_completions/: 01_basic_chat.py  02_system_prompts.py  03_multi_turn.py  04_streaming.py  05_async_requests.py  06_temperature_sampling.py  07_max_tokens.py
examples/03_models_showcase/: 01_grok_4.py  02_grok_4_fast_reasoning.py  03_grok_4_fast_non_reasoning.py  04_grok_4_1_fast.py  05_grok_3.py  06_grok_3_mini.py  07_grok_code_fast.py  08_model_comparison.py
examples/04_vision/: 01_image_understanding.py  02_multiple_images.py  03_image_and_text.py  04_base64_images.py  05_url_images.py
examples/05_image_generation/: 01_basic_generation.py  02_multiple_images.py  03_prompt_engineering.py  04_save_images.py
examples/06_function_calling/: 01_basic_functions.py  02_function_execution.py  03_parallel_functions.py  04_complex_schemas.py  05_real_world_example.py
examples/07_server_side_tools/: 01_web_search.py  02_x_search.py  03_code_execution.py  04_document_search.py  05_live_search.py  06_combined_tools.py  (+2 more)
(+37 files in other folders)
